--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,6 +104,7 @@ body * {
     padding-top: 194px;
     padding-right: 537px;
     padding-left: 42px;
+    max-width: 1172px;
 }
 
 .title {
@@ -265,20 +266,20 @@ body * {
 }
 
 .projects-gallery {
-    background: #131313;
+    background-color: black;
     height: 1074px;
 }
 
 #projects-gallery-container {
     position: relative;
     max-width: 1170px;
-    height: 552px;
-    margin-top: 107px;
-    background: #131313;
+    padding-top: 107px;
 }
 
 .pager {
+    position: relative;
     background: transparent;
+    top: 600px;
 }
 
 .pager-button {
@@ -357,11 +358,14 @@ body * {
 }
 
 #online-control {
+    position: relative;;
     display: flex;
     flex-flow: column;
     align-items: center;
     width: 100%;
     margin: 0 auto;
+    top: -300px;
+    margin-bottom: -300px;
 }
 
 .title-separator-image {
@@ -379,6 +383,7 @@ body * {
     height: fit-content;
     width: 100%;
     text-align: center;
+    margin: 31px;
 }
 
 #online-control-demo img:nth-child(2) {
@@ -469,7 +474,7 @@ body * {
 
 #request-measurer-container {
     position: relative;
-    width: 1643px;
+    max-width: 1643px;
     height: 725px;
     /* top: 3473px; */
     /* left: -303px; */
@@ -482,8 +487,6 @@ body * {
     display: inline;
     width: 1006px;
     height: 645px;
-    /* top: 3473px;
-    left: 703px; */
     background: url("../images/request-measurer/background.svg");
     background-repeat: no-repeat;
     float: left;
